<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryApp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="Create Profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorYellow"
        android:layout_marginBottom="50dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/user_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/passwordPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/password_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/namePrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/name_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/budgetPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/budget_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none|numberSigned|numberDecimal"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/agePrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|left"
                    android:paddingLeft="10dp"
                    android:text="@string/age_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none|numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/genderPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/gender_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="bottom|left"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/contactPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/contact_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editContact"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="top"
                    android:inputType="none"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/biographyPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/biography_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editBiography"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="top"
                    android:inputType="none"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/interestPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="2"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dp"
                    android:text="@string/interest_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorYellow" />

                <EditText
                    android:id="@+id/editInterest"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_inputbox"
                    android:gravity="top"
                    android:hint="@string/interest_hint"
                    android:inputType="none"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_btn_background"
            android:gravity="center"
            android:onClick="createPressed"
            android:paddingLeft="20dp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>