...
    <string name="date_prompt">Pick a date</string>
    <string name="gender_prompt">Gender:</string>
    <string name ="email_prompt">Email:</string>
    <string name ="phone_prompt">Phone Number:</string>
    <string name ="biography_prompt">Biography:</string>
    <string name ="interest_prompt">Interests:</string>
    <string name ="create">Create</string>
    <string name="signup">Sign Up</string>
    <string name ="name_prompt">Name:</string>
    <string name="interest_hint">Separate by commas</string>
    <string name="posting_prompt">Postings:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customize">Customize</string>
...
