...
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:onClick="signupPressed"
        android:textSize="30dp"
        android:textColor="@color/colorYellow"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
...
